[package]
name = "code"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.132"
dotenv = "0.15.0"
serde = { version = "1.0.214", features = ["derive"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors"] }
encoding_rs = "0.8.35"
